<resources>
    <string name="app_name">Ferbook</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tenes_cuenta">¿No tenés cuenta?</string>
    <string name="registrate_aqui">REGISTRATE AQUI</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrate_ahora">Registrate ahora</string>
    <string name="nombre">Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="completa_tus_datos"> Completá tus datos:</string>
    <string name="actualizar">Actualizar</string>
    <string name="filtros">Filtros</string>
    <string name="perfil">Perfil</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_publicacion">CREAR PUBLICACIÓN</string>
    <string name="titulo">TITULO</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="pc">PC</string>
    <string name="nintendo">Nintendo</string>
    <string name="playstation">PlayStation</string>
    <string name="xbox">XBox</string>
    <string name="publicar">PUBLICAR</string>
    <string name="consola">CONSOLA</string>
    <string name="titulo_de_juego">Titulo de Juego</string>
    <string name="descripcion_del_juego">Descripción del juego</string>
    <string name="fragment_home">fragment home</string>
    <string name="telefono">Teléfono</string>

    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="ver_perfil">VER PERFIL</string>
    <string name="nombre_de_usuario">nombre de usuario</string>
    <string name="hace_0_min">hace 0 min</string>
    <string name="_0_likes">0 likes</string>
    <string name="empty_string"> </string>
    <string name="comentarios">Comentarios</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="message">mensaje...</string>


</resources>