<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/portada">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:alpha="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/opticdev_gray"/>

        <LinearLayout
            android:id="@+id/campos_email_y_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/layout_campo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_email_24"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo_electr_nico"
                        android:inputType="textEmailAddress"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_campo_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_lock_24"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/design_default_color_primary"
                android:textColor="@color/white"
                android:text="@string/iniciar_sesion"/>

        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/layout_registrate_aqui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tenes_cuenta"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/tvRegistrateAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_aqui"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>

    



</androidx.coordinatorlayout.widget.CoordinatorLayout>