<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostActivity"
    android:fitsSystemWindows="true"
    android:background="@color/casiNegro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/crear_publicacion"
            android:textStyle="bold"
            android:textColor="@color/rosa"
            android:textSize="20sp"
            android:layout_marginTop="23dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">


            <EditText
                android:id="@+id/input_juego"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/titulo"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:inputType="textCapCharacters"
                android:textAlignment="center"
                android:background="@color/grisOscuro"/>


            <EditText
                android:id="@+id/input_descripcion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/descripcion"
                android:gravity="left"
                android:background="@color/violetaClaro"
                android:padding="5dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:layout_marginTop    ="20dp"
            android:layout_marginStart  ="20dp"
            android:layout_marginEnd    ="20dp"
            android:layout_marginBottom ="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/white"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="7dp">

                <ImageView
                    android:id="@+id/iv_post1"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/upload_image"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="7dp">

                <ImageView
                    android:id="@+id/iv_post2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/upload_image"
                    android:scaleType="centerCrop"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>




        <TextView
            android:id="@+id/tv_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/consola"
            android:textColor="@color/rosaClaro"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/violetaClaro"
            android:layout_marginTop="7dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp">
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="3dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardBackgroundColor="@color/grisOscuro"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/iv_pc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_pc"
                        android:padding="10dp"/>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pc"
                    android:textAlignment="center"
                    android:textColor="@color/violetaClaro"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardBackgroundColor="@color/grisOscuro"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/iv_nintendo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_nintendo"
                        android:padding="10dp"/>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nintendo"
                    android:textAlignment="center"
                    android:textColor="@color/violetaClaro"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardBackgroundColor="@color/grisOscuro"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/iv_playstation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_ps4"
                        android:padding="10dp"/>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/playstation"
                    android:textAlignment="center"
                    android:textColor="@color/violetaClaro"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="6dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cardBackgroundColor="@color/grisOscuro"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/iv_xbox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="15dp"
                        android:src="@drawable/icon_xbox" />


                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xbox"
                    android:textAlignment="center"
                    android:textColor="@color/violetaClaro"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>
            
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_publicar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:text="@string/publicar"
        android:textSize="18sp"
        android:textColor="@color/violetaClaro"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/violetaOscuro"/>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/btn_atras"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_back_white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:elevation="40dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>