<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity"
    android:fitsSystemWindows="true"
    android:background="@color/casiNegro">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/imageViewCover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/cover_image"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        app:layout_collapseMode="pin"
        android:transitionName="@string/transitionname_picture"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImage_Profile"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/ic_profile"
        app:civ_circle_background_color="@color/rosa"
        android:layout_marginTop="140dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <LinearLayout
            android:id="@+id/layout_campo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_person_grey"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextWhite"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:nextFocusForward="@id/input_email"/>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_campo_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_phone_grey"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone"
                    android:theme="@style/editTextWhite"
                    android:nextFocusForward="@id/btn_registrar"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_actualizar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:text="@string/actualizar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/violetaOscuro"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/btn_atras"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow_back_white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>